# model-training

./: .gitignore  .pylintrc  README.md  conftest.py  dataset.dvc  dvc.yaml  generate_chart.py  params.yaml  phishing-detection-cnn.ipynb  pyproject.toml  requirements.txt  tokenizer.joblib
.dvc/: config
.github/workflows/: workflow.yml
lint-results/: results.txt
scripts/: evaluate.py  preprocess.py  train.py
scripts/mutamorphic/: evaluate.py  preprocess.py
src/data/: get_data.py  get_data_kaggle.py  make_dataset.py
src/models/: .gitignore  data_preprocessing.py  model.h5.dvc  model_evaluate.py  model_predict.py  model_train.py
src/visualizations/: confusion_matrix.py
tests/: mutamorphic_eval.py  mutamorphic_tests.py  test_data.py  test_model_evaluate.py  test_model_train.py  test_monitoring.py  test_slices_non_determinism.py
